force-app/main/default/objects/Customer_Sales_Info__c/Customer_Sales_Info__c.object-meta.xml
<CustomObject>
    <label>Customer Sales Info</label>
    <nameField>
        <displayFormat>ASI-{000000}</displayFormat>
        <label>Account Sales Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>