force-app/main/default/objects/Customer_Sales_Info__c/fields/Acct_Assmt_Grp_Cust__c.field-meta.xml
<CustomField>
    <fullName>Acct_Assmt_Grp_Cust__c</fullName>
    <label>Account Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Account_Assessment</valueSetName>
    </valueSet>
</CustomField>