force-app/main/default/objects/Customer_Sales_Info__c/fields/ActivityCustomerTaxCategoryNumber__c.field-meta.xml
<CustomField>
    <fullName>ActivityCustomerTaxCategoryNumber__c</fullName>
    <label>ActivityCustomerTaxCategoryNumber</label>
    <summaryFilterItems>
        <field>Customer_Tax_Category__c.Tax_Category__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Tax_Category__c.Sales_View__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>