force-app/main/default/objects/Customer_Sales_Info__c/fields/Apply_Type__c.field-meta.xml
<CustomField>
    <fullName>Apply_Type__c</fullName>
    <label>Apply Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freeze</fullName>
                <label>Freeze Customer</label>
            </value>
            <value>
                <fullName>UnFreeze</fullName>
                <label>Unfreeze Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>