force-app/main/default/objects/Customer_Sales_Info__c/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivering_Plant__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Model1</valueSetName>
    </valueSet>
</CustomField>