force-app/main/default/objects/Customer_Sales_Info__c/fields/Can_Submit__c.field-meta.xml
<CustomField>
    <fullName>Can_Submit__c</fullName>
    <formula>CustomerTaxCategoryNumber__c = ActivityCustomerTaxCategoryNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Submit</label>
    <type>Checkbox</type>
</CustomField>