force-app/main/default/objects/Customer_Sales_Info__c/fields/Country_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_Text__c</fullName>
    <formula>Country__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code Text</label>
    <type>Text</type>
</CustomField>