force-app/main/default/objects/Customer_Sales_Info__c/fields/Cust_Pric_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Cust_Pric_Procedure__c</fullName>
    <label>Customer Price Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>MX Procedure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>