force-app/main/default/objects/Customer_Sales_Info__c/fields/Customer_MDG_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_MDG_Code__c</fullName>
    <formula>Customer__r.MDG_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer MDG Code</label>
    <type>Text</type>
</CustomField>