force-app/main/default/objects/Customer_Sales_Info__c/fields/Customer_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Record_Type__c</fullName>
    <formula>Customer__r.RecordType.DeveloperName</formula>
    <label>Customer Record Type</label>
    <type>Text</type>
</CustomField>