force-app/main/default/objects/Customer_Sales_Info__c/fields/CustomerTaxCategoryNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerTaxCategoryNumber__c</fullName>
    <label>CustomerTaxCategoryNumber</label>
    <summaryForeignKey>Customer_Tax_Category__c.Sales_View__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>