force-app/main/default/objects/Customer_Sales_Info__c/fields/Distr_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distr_Channel__c</fullName>
    <defaultValue>$User.Distr_Channel_Text__c</defaultValue>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Distribution_Channel</valueSetName>
    </valueSet>
</CustomField>