force-app/main/default/objects/Customer_Sales_Info__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <defaultValue>$User.Division_Text__c</defaultValue>
    <description>产品组</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>