force-app/main/default/objects/Customer_Sales_Info__c/fields/Freeze_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Approval_Status__c</fullName>
    <label>Freeze/Unfreeze Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approving</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>