force-app/main/default/objects/Customer_Sales_Info__c/fields/Is_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Is_Freeze__c</fullName>
    <label>Is Freeze</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>