force-app/main/default/objects/Customer_Sales_Info__c/fields/isSync__c.field-meta.xml
<CustomField>
    <fullName>isSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced to SAP</label>
    <type>Checkbox</type>
</CustomField>