force-app/main/default/objects/Customer_Sales_Info__c/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <label>Price Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>01 Bulk Buyer</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 Occasional Buyer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>