force-app/main/default/objects/Customer_Sales_Info__c/fields/Reconciliation_Account__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Account__c</fullName>
    <label>Reconciliation Account</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Reconciliation_Account</valueSetName>
    </valueSet>
</CustomField>