force-app/main/default/objects/Customer_Sales_Info__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <defaultValue>$User.Sales_Office_Text__c</defaultValue>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sales_Office</valueSetName>
    </valueSet>
</CustomField>