force-app/main/default/objects/Customer_Sales_Info__c/fields/Sales_View_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_View_Status__c</fullName>
    <label>Sales View Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approving</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>SyncFailed</fullName>
                <isActive>false</isActive>
                <label>SyncFailed</label>
            </value>
            <value>
                <fullName>SynchronizedSAP</fullName>
                <isActive>false</isActive>
                <label>SynchronizedSAP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>