force-app/main/default/objects/Customer_Sales_Info__c/fields/Shipping_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Conditions__c</fullName>
    <label>Shipping Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Shipping_Conditions</valueSetName>
    </valueSet>
</CustomField>