force-app/main/default/objects/Customer_Sales_Info__c/fields/Terms_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Terms_Of_Payment__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivering_Plant__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Payment_Term</valueSetName>
    </valueSet>
</CustomField>