force-app/main/default/objects/Customer_Sales_Info__c/validationRules/IncotermsLocation1BothRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>IncotermsLocation1BothRequired</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    OR(
        AND(
            ISBLANK(TEXT(Incoterms__c )),
            ISBLANK(Inco_Location1__c)),
        AND(
            !ISBLANK(TEXT(Incoterms__c)),!ISBLANK(Inco_Location1__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Inco_Location1__c</errorDisplayField>
    <errorMessage>Both Incoterms Location1 are required</errorMessage>
</ValidationRule>